--- a/src/app/Chat-Bet/pages/main-page/main-page.component.scss
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.scss
@@ -111,6 +111,7 @@ align-items: center;
             margin-bottom: 2rem;
             @media (max-width: 900px) {
                text-align: center;
+               margin-bottom: 4rem;
             }
         }
         .aaa{
