--- a/src/app/Chat-Bet/pages/main-page/main-page.component.html
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.html
@@ -649,7 +649,7 @@
  -->  
  <div class="informationcarrusel">
   <div class="content-wrapper">
-    <span class="aaa" >{{ 'carousel.title' | translate }}</span>
+    <span class="TitleTag" >{{ 'carousel.title' | translate }}</span>
      <h1>{{ 'carousel.description' | translate }}</h1>
   </div>
    <app-carousel-slider *ngIf="showCarousel" [gallery]="gallerySlider"></app-carousel-slider>
