--- a/src/app/Chat-Bet/pages/main-page/main-page.component.scss
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.scss
@@ -98,7 +98,7 @@ align-items: center;
             /* width: 100%; */
             display: flex;
             flex-direction: column;
-            /* align-items: center; */
+            align-items: center;
             margin-left: 50%; 
             transform: translateX(-10%); 
             @media (max-width: 900px) {
@@ -114,23 +114,7 @@ align-items: center;
                margin-bottom: 4rem;
             }
         }
-        .aaa{
-            font-family: "Poppins-Bold", sans-serif;
-            text-align: center;
-            display: inline-flex;
-            justify-content: start;
-            border: solid 1px;
-            border-color: #9595ff;
-            border-radius: 50px;
-            padding: 0.5rem 3rem;
-            color: #5554F3;
-            margin: 0 auto; 
-            @media (min-width: 901px) {
-                margin: 0;
-                width: 12%;
-                
-            }
-        }
+
           }
         }
     }
