--- a/src/app/Chat-Bet/pages/main-page/main-page.component.html
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.html
@@ -187,7 +187,7 @@
 <div id="funciones" class="section">
   <div class="second-section">
     <div class="second-flex">
-      <span class="TitleTag" id="feature">{{ 'features.descriptionHeader' | translate }}</span>
+        <span class="TitleTag" id="feature">{{ 'features.descriptionHeader' | translate }}</span>
       <h1>{{ 'features.title' | translate }}</h1>
       <div class="newtex">
        
@@ -264,7 +264,9 @@
         <img [src]="currentImages['beneficios']" alt="" />
       </div>
       <div class="text">
+        <div class="contentcenter">
         <span class="TitleTag" id="benefits">{{ 'benefits.operators.descriptionHeader' | translate }}</span>
+        </div>
         <h1>{{ 'benefits.operators.title' | translate }} <br>
           {{ 'benefits.operators.secondtitle' | translate }}</h1>
         
@@ -411,7 +413,9 @@
   <div class="third-section">
     <div class="third-flex">
       <div class="text">
+        <div class="contentcenter">
         <span class="TitleTag" id="HowDoesitWork">{{ 'howItWorks.titleheader' | translate }}</span>
+        </div>
         <h1>{{ 'howItWorks.title' | translate }} <br>
           {{ 'howItWorks.titlescond' | translate }}</h1>
 
@@ -526,7 +530,9 @@
         <img src="../../../../assets/img/NFrame6.png" alt="" />
       </div>
       <div class="text">
+        <div class="contentcenter">
         <span class="TitleTag" id="security">{{ 'security.titleheader' | translate }}</span>
+        </div>
         <h1>{{ 'security.title' | translate }}</h1>
         <p>{{ 'security.description' | translate }}</p>
         <div class="secondlist">
@@ -563,7 +569,9 @@
   <div class="third-section">
     <div class="third-flex">
       <div class="text">
+        <div class="contentcenter">
         <span class="TitleTag" id="compliance">{{ 'compliance.titleheader' | translate }}</span>
+        </div>
         <h1>{{ 'compliance.title' | translate }}</h1>
         <br />
         <p>{{ 'compliance.description' | translate }}</p>
@@ -610,7 +618,9 @@
         <img src="../../../../assets/HomePage/integration.png" alt="" />
       </div>
       <div class="text">
+        <div class="contentcenter">
         <span class="TitleTag" >{{ 'integration.titleheader' | translate }}</span>
+        </div>
         <h1>{{ 'integration.title' | translate }}</h1>
         <p>{{ 'integration.description' | translate }}</p>
         <div class="secondlist">
