--- a/src/app/Chat-Bet/pages/main-page/main-page.component.scss
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.scss
@@ -899,6 +899,7 @@ h3{
           font-size: clamp(0.8rem, 1.5vw, 1.1rem);
 
           @media (max-width: 600px) {
+            text-align: center;
             font-size: 0.6rem;
             padding: 0 0 0 1.2rem;
             /* text-align: center; */
