--- a/src/app/Chat-Bet/pages/main-page/main-page.component.scss
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.scss
@@ -42,6 +42,13 @@ align-items: center;
         display: flex;
         justify-content: center;
         align-items: center;
+        flex-direction: column;
+    }
+
+    h1{
+        @media (max-width:900px) {  
+          text-align: center;
+        }
     }
     
 }
