--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -181,7 +181,15 @@ header {
     justify-content: space-between;
     margin: 0;
     font-weight: 400;
-    a { margin: 5px; }
+    img{
+      width: 12px;
+      height: auto;
+    }
+    a { margin: 5px; 
+      font-family: "Poppins", sans-serif;
+      font-weight: bold;
+      
+    }
     @media screen and (max-width: 900px) {
       margin-top: 20px;
       margin-bottom: -25px;
