--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -92,8 +92,8 @@ header {
       margin: 5px;
       color: #5554F3;
       text-decoration: none;
-      font-family: "Poppins-Bold", sans-serif;
-      font-size: 1.2rem;
+      font-family: "Poppins", sans-serif;
+      font-size: 0.8rem;
       &:hover { color: #9595ff; }
     }
     @media screen and (min-width: 900px) { display: none; }
