--- a/src/app/Chat-Bet/pages/aboutus/aboutus.component.html
+++ b/src/app/Chat-Bet/pages/aboutus/aboutus.component.html
@@ -204,51 +204,10 @@
       </div>
     </mat-expansion-panel>
 
-    <!-- Panel 5 -->
- <!--    <mat-expansion-panel>
-      <mat-expansion-panel-header>
-        <mat-panel-title>
-          <img src="../../../../assets/Icon/icon-mat.png" class="iconimage" alt="Icon">
-          <h5>{{ 'accordion.section5.title' | translate }}</h5>
-        </mat-panel-title>
-      </mat-expansion-panel-header>
-      <div class="panel-content">
-        <div class="content-with-icon">
-          <img src="../../../../assets/Icon/chat-bet-mat.png" class="iconimage" alt="Icon">
-          <div class="content-text">
-            <ul class="lista">
-              <li>{{ 'accordion.section5.list1' | translate }}</li>
-              <li>{{ 'accordion.section5.list2' | translate }}</li>
-              <li>{{ 'accordion.section5.list3' | translate }}</li>
-              <li>{{ 'accordion.section5.list4' | translate }}</li>
-              <li>{{ 'accordion.section5.list5' | translate }}</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </mat-expansion-panel> -->
-
-    <!-- Panel 6 -->
-   <!--  <mat-expansion-panel>
-      <mat-expansion-panel-header>
-        <mat-panel-title>
-          <img src="../../../../assets/Icon/icon-mat.png" class="iconimage" alt="Icon">
-          <h6>{{ 'accordion.section6.title' | translate }}</h6>
-        </mat-panel-title>
-      </mat-expansion-panel-header>
-      <div class="panel-content">
-        <div class="content-with-icon">
-          <img src="../../../../assets/Icon/chat-bet-mat.png" class="iconimage" alt="Icon">
-          <div class="content-text">
-            <p>{{ 'accordion.section6.content' | translate }}</p>
-          </div>
-        </div>
-      </div>
-    </mat-expansion-panel> -->
   </mat-accordion>
 </div>
 
-<hr class="hr">
+<!-- <hr class="hr">
 
 <div id="funciones" class="section">
   <div class="second-section">
@@ -303,5 +262,5 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 
