--- a/src/app/Chat-Bet/pages/main-page/main-page.component.html
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.html
@@ -633,7 +633,7 @@
         <span class="TitleTag" id="contactus">{{ 'contactUs.titleheader' | translate }}</span>
       </div>
       <h1>{{ 'contactUs.title' | translate }}</h1>
-      <h3>
+     <!--  <h3>
         <span class="TitleBoldMobile">{{ 'contactUs.subtitle' | translate }}</span>
       </h3>
    
@@ -644,7 +644,7 @@
       width="100%" 
       height="700px"
       frameborder="0"
-      ></iframe> 
+      ></iframe>  -->
 
       <h3>
         <span class="TitleBoldMobile">{{ 'calender.notReady' | translate }}</span>
@@ -659,7 +659,7 @@
             <input formControlName="name" type="text" [placeholder]="'contactUs.form.name' | translate" />
           </div>
           <div class="form-section">
-            <div class="countries">
+            <!-- <div class="countries">
               <div class="num-selector">
                 <app-custom-select
                   [countries]="countries"
@@ -667,7 +667,26 @@
                 ></app-custom-select>
               </div>
               <input formControlName="contact" type="text" [placeholder]="'contactUs.form.contactNumber' | translate" />
-            </div>
+            </div> -->
+
+        <div class="countries">
+            <input
+              type="text"
+              [value]="form.value.monthlyGgr"
+              readonly
+              placeholder="{{ 'contactUs.form.monthlyGgr' | translate }}"
+            
+          />
+          <select formControlName="monthlyGgr">
+            <option value="" disabled selected>
+      {{ 'contactUs.form.select' | translate }}
+    </option>
+          <option *ngFor="let option of monthlyGgrOptions" [value]="option">
+            {{ option }}
+          </option>
+          </select>
+          </div>
+       
           </div>
           <div class="form-section">
             <input formControlName="email" type="text" [placeholder]="'contactUs.form.email' | translate" />
@@ -676,8 +695,15 @@
             <input formControlName="empresa" type="text" [placeholder]="'contactUs.form.company' | translate" />
           </div>
         </div>
+
+
         <div class="form-send">
           <input formControlName="message" type="text" [placeholder]="'contactUs.form.message' | translate" />
+          <br>
+          <h3>
+        <span class="TitleBoldMobile">{{ 'contactUs.form.thanksmessage' | translate }}</span>
+      </h3>
+
           <button type="submit">{{ 'contactUs.form.submit' | translate }}</button>
         </div>
       </form>
