--- a/src/app/Chat-Bet/pages/main-page/main-page.component.scss
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.scss
@@ -1382,6 +1382,25 @@ h3{
 }
 .form-section{
     margin-top: 1rem;
+
+    select {
+  width: 90px;           
+  height: 40px;           
+  padding: 0 8px;         
+  font-size: 14px;        
+  border-radius: 4px;     
+  border: 1px solid #ccc; 
+  appearance: none;       
+  background-color: white;
+  margin-top: 25px;
+
+}
+
+select:focus {
+  border-color: #4a90e2;
+  outline: none;
+}
+
     .countries{
     display: flex;
     justify-content: space-between;
