--- a/src/app/Chat-Bet/pages/main-page/main-page.component.html
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.html
@@ -700,11 +700,21 @@
           
          
         </div>
+        
+        
 
 
         <div class="form-send">
           <input formControlName="message" type="text" [placeholder]="'contactUs.form.message' | translate" />
           <br>
+
+          <div class="leyenda">
+            <br>
+          <small>
+            {{ 'contactUs.leyenda' | translate }}
+          </small>
+        </div>
+        
           <h3>
         <span class="TitleBoldMobile">{{ 'contactUs.form.thanksmessage' | translate }}</span>
       </h3>
