--- a/src/app/Chat-Bet/pages/main-page/main-page.component.scss
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.scss
@@ -8,6 +8,12 @@ h1,h2,h3,h4,h5,h6{
     color:#5554F3;
 }
 
+.leyenda{
+    small{
+        font-family: "Poppins", sans-serif;
+        color: gray;
+    }
+}
 
 .TitleBold3{
     font-family: "Poppins-Bold", sans-serif;
