--- a/src/app/Chat-Bet/pages/main-page/main-page.component.scss
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.scss
@@ -1395,15 +1395,17 @@ h3{
     margin-top: 1rem;
 
     select {
-  width: 90px;           
-  height: 40px;           
-  padding: 0 8px;         
-  font-size: 14px;        
-  border-radius: 4px;     
-  border: 1px solid #ccc; 
-  appearance: none;       
-  background-color: white;
-  margin-top: 25px;
+        width: 40%; 
+        min-width: 150px; 
+        height: 40px;
+        padding: 0 8px;
+        font-size: 14px;
+        border-radius: 4px;
+        border: 1px solid #ccc;
+        appearance: none;
+        background-color: white;
+        margin-top: 25px;
+    }
 
 }
 
@@ -1417,6 +1419,10 @@ select:focus {
     justify-content: space-between;
     /* margin-top: -20px; */
     width: 92%;
+    input[type="text"]:not(.num-selector) {
+            width: 60%; 
+            margin-right: 1%; 
+        }
     .num-selector{
         width: 100%;
         padding: 1rem;
@@ -1427,7 +1433,7 @@ select:focus {
         margin-top: 15px;   
     }
 }
-}
+
 
 .form-send{
     /* margin-top: 4%; */
