Modificacion de Prueba

--- a/src/app/Chat-Bet/pages/main-page/main-page.component.html
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.html
@@ -1,5 +1,5 @@
 <div class="section">
-
+<!-- Prueba -->
   <div class="background">
     <!-- <img src="./assets/Background/nuevoheader.png" alt="" /> -->
   </div>
